Bug 1709319 - Fix DevicePixelsToGdkCoordRoundUp and co. r=rmader

Differential Revision: https://phabricator.services.mozilla.com/D114229